// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseListPage should render 1`] = `
<div>
  <div
    class="index-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <header
      class="header-root"
    >
      <div
        class="header-container"
      >
        <div
          class="row-root align-items-center d-flex justify-content-between"
        >
          <ol
            class="breadcrumb breadcrumbs-root"
          >
            <li
              class="breadcrumb-item"
            >
              <a
                class="breadcrumb-link breadcrumb-text-truncate"
                href="/workspace/23/123123/sites"
              >
                Channel 1
              </a>
            </li>
          </ol>
        </div>
        <div
          class="row-root align-items-center d-flex justify-content-between"
        >
          <div
            class="header-section title-section"
          >
            <span
              class="align-items-center d-flex"
            >
              <h1
                class="title text-truncate"
              >
                <span
                  class="text-truncate"
                  data-tooltip="false"
                  title=""
                >
                  Accounts
                </span>
              </h1>
            </span>
          </div>
          <div
            class="header-section"
          />
        </div>
      </div>
    </header>
    <div
      class="body-root page-container"
    >
      <span
        class="children-wrapper"
      >
        <div
          class="embedded-alert-list-root"
        />
        <div
          class="card card-root page-display"
        >
          <div
            class="card-body no-padding"
          >
            <div
              class="base-results-root d-flex flex-column flex-grow-1 searchable-table-root searchable-table-borderless"
            >
              <div
                class="toolbar-root"
              >
                <nav
                  class="navbar navbar-root management-bar management-bar-light navbar-expand"
                >
                  <div
                    class="container-fluid"
                  >
                    <ul
                      class="nav-root front-nav navbar-nav"
                      role="tablist"
                    >
                      <li
                        aria-haspopup="true"
                        class="dropdown dropdown-root filter-and-order-root nav-item"
                      >
                        <button
                          class="button-root btn btn-unstyled dropdown-toggle nav-btn show-caret"
                          data-testid="filter-and-order-button"
                          type="button"
                        >
                          <span
                            class="text-truncate"
                          >
                            Order
                          </span>
                          
                          <span
                            class="caret-root"
                          >
                            <svg
                              class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                              viewBox=""
                            >
                              <use
                                xlink:href="#caret-bottom"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="nav-item"
                        role="presentation"
                      >
                        <a
                          class="button-root btn btn-unstyled nav-link nav-link-monospaced btn-outline-borderless"
                          href="/?orderBy=desc&page=1"
                        >
                          <svg
                            class="icon-root lexicon-icon lexicon-icon-order-arrow-ascending"
                            viewBox=""
                          >
                            <use
                              xlink:href="#order-arrow-ascending"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                    <div
                      class="navbar-form navbar-form-autofit"
                    >
                      <div
                        class="input-group search"
                      >
                        <div
                          class="input-group-item"
                        >
                          <input
                            class="input-root form-control input-group-inset input-group-inset-after"
                            placeholder="Search"
                            type="text"
                            value=""
                          />
                          <div
                            class="input-group-inset-item input-group-inset-item-after"
                          >
                            <button
                              class="button-root btn btn-unstyled"
                              type="button"
                            >
                              <svg
                                class="icon-root lexicon-icon lexicon-icon-search"
                                viewBox=""
                              >
                                <use
                                  xlink:href="#search"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
              <div
                class="table-responsive table-root flex-grow-1"
              >
                <table
                  class="table table-autofit table-hover table-heading-nowrap table-nowrap"
                >
                  <thead>
                    <tr
                      class=""
                    >
                      <th
                        class="table-head-title"
                      >
                        <a
                          class="button-root btn btn-unstyled inline-item text-truncate-inline"
                          href="/?orderBy=asc&orderByField=name&page=1"
                        >
                          <span
                            class="text-truncate"
                          >
                            Name
                          </span>
                        </a>
                      </th>
                      <th
                        class="table-head-title"
                      >
                        <a
                          class="button-root btn btn-unstyled inline-item text-truncate-inline"
                          href="/?orderBy=asc&orderByField=id&page=1"
                        >
                          <span
                            class="text-truncate"
                          >
                            Id
                          </span>
                        </a>
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        account0
                      </td>
                      <td
                        class=""
                      >
                        0
                      </td>
                    </tr>
                  </tbody>
                  <tbody>
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        account1
                      </td>
                      <td
                        class=""
                      >
                        1
                      </td>
                    </tr>
                  </tbody>
                  <tbody>
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        account2
                      </td>
                      <td
                        class=""
                      >
                        2
                      </td>
                    </tr>
                  </tbody>
                  <tbody>
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        account3
                      </td>
                      <td
                        class=""
                      >
                        3
                      </td>
                    </tr>
                  </tbody>
                  <tbody>
                    <tr
                      class=""
                    >
                      <td
                        class=""
                      >
                        account4
                      </td>
                      <td
                        class=""
                      >
                        4
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <nav
                class="navbar navbar-root pagination-bar-root"
              >
                <div
                  class="container-fluid"
                >
                  <div
                    aria-haspopup="true"
                    class="dropdown dropdown-root pagination-items-per-page"
                  >
                    <button
                      class="button-root btn btn-secondary dropdown-toggle show-caret btn-sm"
                      type="button"
                    >
                      <span
                        class="text-truncate"
                      >
                        2 Items
                      </span>
                      
                      <span
                        class="caret-root"
                      >
                        <svg
                          class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                          viewBox=""
                        >
                          <use
                            xlink:href="#caret-bottom"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="pagination-results"
                  >
                    Showing 1 to 2 of 5 entries.
                  </div>
                  <ul
                    class="pagination pagination-root"
                  >
                    <li
                      class="page-item disabled"
                    >
                      <a
                        class="button-root btn btn-unstyled page-link link-disabled"
                      >
                        <svg
                          class="icon-root lexicon-icon lexicon-icon-angle-left"
                          viewBox=""
                        >
                          <use
                            xlink:href="#angle-left"
                          />
                        </svg>
                      </a>
                    </li>
                    <li
                      class="page-item active"
                    >
                      <a
                        class="button-root btn btn-unstyled page-link"
                        href="/?page=1"
                      >
                        1
                      </a>
                    </li>
                    <li
                      class="page-item"
                    >
                      <a
                        class="button-root btn btn-unstyled page-link"
                        href="/?page=2"
                      >
                        2
                      </a>
                    </li>
                    <li
                      class="page-item"
                    >
                      <a
                        class="button-root btn btn-unstyled page-link"
                        href="/?page=3"
                      >
                        3
                      </a>
                    </li>
                    <li
                      class="page-item"
                    >
                      <a
                        class="button-root btn btn-unstyled page-link"
                        href="/?page=2"
                      >
                        <svg
                          class="icon-root lexicon-icon lexicon-icon-angle-right"
                          viewBox=""
                        >
                          <use
                            xlink:href="#angle-right"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </nav>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`BaseListPage should render with a member-specific message to connect datasources 1`] = `
<div>
  <div
    class="index-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <header
      class="header-root"
    >
      <div
        class="header-container"
      >
        <div
          class="row-root align-items-center d-flex justify-content-between"
        >
          <ol
            class="breadcrumb breadcrumbs-root"
          >
            <li
              class="breadcrumb-item"
            >
              <a
                class="breadcrumb-link breadcrumb-text-truncate"
                href="/workspace/23/123123/sites"
              >
                Channel 1
              </a>
            </li>
          </ol>
        </div>
        <div
          class="row-root align-items-center d-flex justify-content-between"
        >
          <div
            class="header-section title-section"
          >
            <span
              class="align-items-center d-flex"
            >
              <h1
                class="title text-truncate"
              >
                <span
                  class="text-truncate"
                  data-tooltip="false"
                  title=""
                >
                  Accounts
                </span>
              </h1>
            </span>
          </div>
          <div
            class="header-section"
          />
        </div>
      </div>
    </header>
    <div
      class="body-root page-container"
    >
      <span
        class="children-wrapper"
      >
        <div
          class="embedded-alert-list-root"
        />
        <div
          class="card card-root page-display"
        >
          <div
            class="card-body no-padding"
          >
            <div
              class="base-results-root d-flex flex-column flex-grow-1 searchable-table-root searchable-table-borderless"
            >
              <div
                class="toolbar-root"
              >
                <nav
                  class="navbar navbar-root management-bar management-bar-light navbar-expand"
                >
                  <div
                    class="container-fluid"
                  >
                    <ul
                      class="nav-root front-nav navbar-nav"
                      role="tablist"
                    >
                      <li
                        aria-haspopup="true"
                        class="dropdown dropdown-root filter-and-order-root nav-item"
                      >
                        <button
                          class="button-root btn btn-unstyled dropdown-toggle nav-btn show-caret"
                          data-testid="filter-and-order-button"
                          type="button"
                        >
                          <span
                            class="text-truncate"
                          >
                            Order
                          </span>
                          
                          <span
                            class="caret-root"
                          >
                            <svg
                              class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                              viewBox=""
                            >
                              <use
                                xlink:href="#caret-bottom"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="nav-item"
                        role="presentation"
                      >
                        <a
                          class="button-root btn btn-unstyled nav-link nav-link-monospaced btn-outline-borderless"
                          href="/?orderBy=desc&page=1"
                        >
                          <svg
                            class="icon-root lexicon-icon lexicon-icon-order-arrow-ascending"
                            viewBox=""
                          >
                            <use
                              xlink:href="#order-arrow-ascending"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                    <div
                      class="navbar-form navbar-form-autofit"
                    >
                      <div
                        class="input-group search"
                      >
                        <div
                          class="input-group-item"
                        >
                          <input
                            class="input-root form-control input-group-inset input-group-inset-after"
                            placeholder="Search"
                            type="text"
                            value=""
                          />
                          <div
                            class="input-group-inset-item input-group-inset-item-after"
                          >
                            <button
                              class="button-root btn btn-unstyled"
                              type="button"
                            >
                              <svg
                                class="icon-root lexicon-icon lexicon-icon-search"
                                viewBox=""
                              >
                                <use
                                  xlink:href="#search"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
              <div
                class="no-results-root flex-grow-1 no-results-primary"
              >
                <div
                  class="no-results-content"
                >
                  <h4
                    class="no-results-title"
                  >
                    No Data Sources Connected
                  </h4>
                  <p
                    class="no-results-description"
                  >
                    Please contact your site administrator to add people data sources.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`BaseListPage should render with a message to connect datasources 1`] = `
<div>
  <div
    class="index-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <header
      class="header-root"
    >
      <div
        class="header-container"
      >
        <div
          class="row-root align-items-center d-flex justify-content-between"
        >
          <ol
            class="breadcrumb breadcrumbs-root"
          >
            <li
              class="breadcrumb-item"
            >
              <a
                class="breadcrumb-link breadcrumb-text-truncate"
                href="/workspace/23/123123/sites"
              >
                Channel 1
              </a>
            </li>
          </ol>
        </div>
        <div
          class="row-root align-items-center d-flex justify-content-between"
        >
          <div
            class="header-section title-section"
          >
            <span
              class="align-items-center d-flex"
            >
              <h1
                class="title text-truncate"
              >
                <span
                  class="text-truncate"
                  data-tooltip="false"
                  title=""
                >
                  Accounts
                </span>
              </h1>
            </span>
          </div>
          <div
            class="header-section"
          />
        </div>
      </div>
    </header>
    <div
      class="body-root page-container"
    >
      <span
        class="children-wrapper"
      >
        <div
          class="embedded-alert-list-root"
        />
        <div
          class="card card-root page-display"
        >
          <div
            class="card-body no-padding"
          >
            <div
              class="base-results-root d-flex flex-column flex-grow-1 searchable-table-root searchable-table-borderless"
            >
              <div
                class="toolbar-root"
              >
                <nav
                  class="navbar navbar-root management-bar management-bar-light navbar-expand"
                >
                  <div
                    class="container-fluid"
                  >
                    <ul
                      class="nav-root front-nav navbar-nav"
                      role="tablist"
                    >
                      <li
                        aria-haspopup="true"
                        class="dropdown dropdown-root filter-and-order-root nav-item"
                      >
                        <button
                          class="button-root btn btn-unstyled dropdown-toggle nav-btn show-caret"
                          data-testid="filter-and-order-button"
                          type="button"
                        >
                          <span
                            class="text-truncate"
                          >
                            Order
                          </span>
                          
                          <span
                            class="caret-root"
                          >
                            <svg
                              class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                              viewBox=""
                            >
                              <use
                                xlink:href="#caret-bottom"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="nav-item"
                        role="presentation"
                      >
                        <a
                          class="button-root btn btn-unstyled nav-link nav-link-monospaced btn-outline-borderless"
                          href="/?orderBy=desc&page=1"
                        >
                          <svg
                            class="icon-root lexicon-icon lexicon-icon-order-arrow-ascending"
                            viewBox=""
                          >
                            <use
                              xlink:href="#order-arrow-ascending"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                    <div
                      class="navbar-form navbar-form-autofit"
                    >
                      <div
                        class="input-group search"
                      >
                        <div
                          class="input-group-item"
                        >
                          <input
                            class="input-root form-control input-group-inset input-group-inset-after"
                            placeholder="Search"
                            type="text"
                            value=""
                          />
                          <div
                            class="input-group-inset-item input-group-inset-item-after"
                          >
                            <button
                              class="button-root btn btn-unstyled"
                              type="button"
                            >
                              <svg
                                class="icon-root lexicon-icon lexicon-icon-search"
                                viewBox=""
                              >
                                <use
                                  xlink:href="#search"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
              <div
                class="no-results-root flex-grow-1 no-results-primary"
              >
                <div
                  class="no-results-content"
                >
                  <h4
                    class="no-results-title"
                  >
                    No Data Sources Connected
                  </h4>
                  <p
                    class="no-results-description"
                  >
                    Please connect people data sources to start using Analytics Cloud.
                  </p>
                  <a
                    class="button-root btn btn-primary"
                    href="/workspace/23/settings/data-source/add"
                  >
                    Connect Data Source
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`BaseListPage should render with an embedded alert 1`] = `
<div
  class="alert alert-info"
  role="alert"
>
  <span
    class="alert-indicator"
  >
    <svg
      class="icon-root lexicon-icon lexicon-icon-info-circle"
      viewBox=""
    >
      <use
        xlink:href="#info-circle"
      />
    </svg>
  </span>
  <strong
    class="lead"
  >
    Info:
  </strong>
  foo alert
</div>
`;

exports[`BaseListPage should render with an empty query state 1`] = `
<div
  class="tbar-section text-truncate"
>
  0
   Results for "
  <b>
    non-existent datasource
  </b>
  "
</div>
`;
